# BeAR-app

./: README.md  build.gradle  gradle.properties  settings.gradle
app/src/main/: AndroidManifest.xml  CMakeLists.txt
app/src/main/cpp/: README.md  native-lib.cpp
app/src/main/java/com/example/arbenchapp/: MTLBox.java  MainActivity.java  README.md  SettingsActivity.java
app/src/main/java/com/example/arbenchapp/datatypes/: AssetFilePreference.java  ConversionMethod.java  ImagePage.java  ImagePageAdapter.java  MTLBoxStruct.java  ModelType.java  MultiSelectListPreference.java  README.md  Resolution.java  RunType.java  Settings.java  SplitInfo.java  StringMappingPreference.java
app/src/main/java/com/example/arbenchapp/improvemodels/: BitmapPool.java  ImageConverter.java  InputPreparation.java  ParallelInference.java  PythonRunner.java
app/src/main/java/com/example/arbenchapp/monitor/: HardwareMonitor.java  MTLBox.java  README.md  (+1 more)
app/src/main/res/layout/: app_bar_main.xml  fragment_home.xml  nav_header_main.xml  page_image.xml  preference_string_mapping.xml  preference_string_mapping_dialog.xml  settings.xml
app/src/main/res/layout-land/: page_image.xml
app/src/main/res/menu/: activity_main_drawer.xml
app/src/main/res/mipmap-anydpi-v26/: ic_scale.xml
app/src/main/res/navigation/: mobile_navigation.xml
app/src/main/res/values/: arrays.xml  attrs.xml  ic_scale_background.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/xml/: cam_preferences.xml  hw_preferences.xml  model_preferences.xml  preferences.xml
(+32 files in other folders)
